<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/gestures">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_swipe_gesture"
            android:summary="@string/swipe_controls_summary"
            app:key="player_swipe_controls"
            app:title="@string/swipe_controls" />



        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_skip"
            android:summary="@string/double_tap_seek_summary"
            app:key="double_tap_seek"
            app:title="@string/double_tap_seek" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_time_outlined"
            android:summary="@string/long_press_fast_forward_summary"
            app:key="long_press_fast_forward"
            app:title="@string/long_press_fast_forward" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/behavior">

        <com.github.libretube.ui.views.SliderPreference
            android:icon="@drawable/ic_skip"
            app:defValue="10.0"
            app:key="seek_increment"
            app:stepSize="5.0"
            app:title="@string/seek_increment"
            app:valueFrom="5.0"
            app:valueTo="60.0" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_next"
            android:summary="@string/skip_buttons_summary"
            app:key="skip_buttons"
            app:title="@string/skip_buttons" />



    </PreferenceCategory>



    <PreferenceCategory app:title="@string/queue">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:summary="@string/autoplay_playlists_summary"
            android:title="@string/autoplay_playlists"
            app:key="autoplay_playlists" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/misc">

        <com.github.libretube.ui.preferences.EditNumberPreference
            android:icon="@drawable/ic_time"
            app:defaultValue="50"
            app:key="buffering_goal"
            app:summary="@string/buffering_goal_summary"
            app:title="@string/buffering_goal" />

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_call"
            android:summary="@string/playback_during_call_summary"
            app:defaultValue="false"
            app:key="playback_during_call"
            app:title="@string/playback_during_call" />



        <SwitchPreferenceCompat
            android:icon="@drawable/ic_pause_filled"
            android:summary="@string/pauseOnScreenOff_summary"
            app:defaultValue="false"
            app:key="pause_screen_off"
            app:title="@string/pauseOnScreenOff" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_play_circle"
            android:summary="@string/play_automatically_summary"
            app:key="play_automatically"
            app:title="@string/play_automatically" />

    </PreferenceCategory>

</PreferenceScreen>