<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <PreferenceCategory app:title="@string/playlists">

        <Preference
            android:icon="@drawable/ic_download_filled"
            app:key="import_playlists"
            app:title="@string/import_playlists" />

        <Preference
            android:icon="@drawable/ic_upload"
            app:key="export_playlists"
            app:title="@string/export_playlists" />

    </PreferenceCategory>



    <PreferenceCategory app:title="@string/app_backup">

        <Preference
            android:icon="@drawable/ic_backup"
            app:key="backup"
            app:title="@string/backup" />

        <Preference
            android:icon="@drawable/ic_restore"
            app:key="restore"
            app:title="@string/restore" />

    </PreferenceCategory>

</PreferenceScreen>