<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <PreferenceCategory app:title="@string/customization">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_headphones"
            android:summary="@string/audio_only_mode_summary"
            android:title="@string/audio_only_mode"
            app:key="audio_only_mode" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_audio"
            android:summary="@string/auto_music_audio_mode_summary"
            android:title="@string/auto_music_audio_mode"
            app:key="auto_music_audio_mode" />


        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_suggestions"
            app:key="search_suggestions"
            app:title="@string/show_search_suggestions" />



    </PreferenceCategory>





</PreferenceScreen>